# EVOLVED-RAG

./: .gitignore  README.md  pyproject.toml
docker/: .gitignore  docker-compose.yml
docker/env/: .env.example.app  .env.example.postgres  .env.example.postgres.exporter
docker/minirag/: Dockerfile  entrypoint.sh
docker/prometheus/: prometheus.yml
src/: .env.example  main.py  requirements.txt  test.py
src/assets/: .gitignore
src/controllers/: BaseController.py  NLPController.py  ProcessController.py
src/helpers/: config.py
src/models/: AssetModel.py  ChunkModel.py  ProjectModel.py
src/models/db_schemes/: __init__.py  asset.py  data_chunk.py  project.py
src/models/db_schemes/minirag/alembic/versions/: aeb9e8054176_initial_commit.py
src/models/db_schemes/minirag/schemes/: __init__.py  asset.py  datachunk.py  project.py
src/models/enums/: ResponseEnums.py
src/routes/: data.py  nlp.py  test.py
src/routes/schemes/: nlp.py
src/stores/llm/: LLMEnums.py  LLMProviderFactory.py
src/stores/llm/providers/: CoHereProvider.py  GeminiProvider.py  OpenAIProvider.py  __init__.py
src/stores/llm/templates_folder/: template_parser.py
src/stores/llm/templates_folder/locales/ar/: rag.py
src/stores/llm/templates_folder/locales/en/: rag.py
src/stores/vectordb/: VectorDBEnums.py  VectorDBInterface.py  VectorDBProviderFactory.py
src/stores/vectordb/providers/: PGVectorDBProvider.py  QdrantDBProvider.py  __init__.py
src/utils/: limiter.py  metrics.py
