[project]
name = "mini-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==23.2.1",
    "cohere==5.5.8",
    "fastapi==0.110.2",
    "langchain==0.1.20",
    "motor==3.6.0",
    "openai==2.8.1",
    "pydantic-mongo==2.3.0",
    "pydantic-settings==2.2.1",
    "pymupdf==1.24.3",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "qdrant-client==1.10.1",
    "uvicorn[standard]==0.29.0",
]
